--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_counts.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp PRE BS Sulfentrazone DR Counts"
+title: "Waterhemp PRE A92 Sulfentrazone DR Counts"
 author: "Felipe Faleco"
 date: "10/19/2022"
 output:
@@ -34,7 +34,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.BS <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="BS"),
+summary.A92 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A92"),
           FUN=fun)
 
 
@@ -148,12 +148,21 @@ plot(model.LL3,
      ylim = c(0, 8),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.3,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
      legendPos = c(700, 6),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]), 
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 abline(v = 280, 
