--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp PRE BS Fomesafen DR Counts"
+title: "Waterhemp PRE A92 Fomesafen DR Counts"
 author: "Felipe Faleco"
 date: "10/19/2022"
 output:
@@ -35,7 +35,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.BS <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="BS"),
+summary.A92 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data, pop=="A92"),
           FUN=fun)
 
 
@@ -51,13 +51,13 @@ summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data,
 
 ```{r}
 
-model.W1.3<- drm(count~ rate, pop, fct = W1.3(), data = data, type = "continuous")
+model.LL4<- drm(count~ rate, pop, fct = LL.4(), data = data, type = "continuous")
 
 
                 
-modelFit(model.W1.3) # higher the p-value, better.
+modelFit(model.LL4) # higher the p-value, better.
 
-summary(model.W1.3) 
+summary(model.LL4) 
 
 # c: lower limit (models with negative lower limit are biologically impossible. E.g., negative biomass, negative % biomass reduction, or negative % control)
 
@@ -75,9 +75,9 @@ summary(model.W1.3)
 
 ```{r, warning=FALSE}
 
-mselect(model.W1.3,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.4(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
+mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.4(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
 
-#LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
+#LL.4 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.4 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
 
@@ -100,7 +100,7 @@ mselect(model.W1.3,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.4(), LL.5(), W
 
 ```{r}
 
-ED(model.W1.3, c(50, 90), type = "relative") 
+ED(model.LL4, c(50, 90), type = "relative") 
 
 
 # Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
@@ -112,20 +112,20 @@ ED(model.W1.3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.LL4, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.W1.3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.LL4, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.LL4, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+compParm(model.LL4, strVal = "d", operator = "-")
 
 # Comparing e parameter (ED50)
-compParm(model.W1.3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
 ```
@@ -143,19 +143,28 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Wis
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.LL4,
      type = "average",
      xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
      ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
      ylim = c(0, 15),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.3,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
      legendPos = c(680, 11),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL4)$coefficients[7, 1], 
+             summary(model.LL4)$coefficients[8, 1]), 
+       y = c((summary(model.LL4)$coefficients[5, 1]/2), 
+             (summary(model.LL4)$coefficients[6, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 abline(v = 263, 
@@ -165,14 +174,14 @@ abline(v = 263,
 
 
 text(x = 650, y = 6.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 148.9 ("%+-% "38.3)")),
+     labels = expression(paste("ED"[50] ~ "A92 = 132.0 ("%+-% "37.3)")),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
 text(x = 645, y = 5.2, 
-     labels = expression(paste("ED"[50] ~ "A66 = 16.4 ("%+-% "31.8)")),
+     labels = expression(paste("ED"[50] ~ "A66 = 13.5 ("%+-% "24.6)")),
      cex = 1.3,
      col = "black",
      font = 2)
