--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH.Rmd
@@ -134,9 +134,9 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ##SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Meso_Brook_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/GH_Meso Only_All Pops_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -146,11 +146,11 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Brook Biomass (g plant"^-1, ")")),
+     ylab = expression(paste("Biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("darkgreen", "red", "navy"),
      pch = c(19, 17, 15),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.2,
@@ -159,38 +159,24 @@ plot(model.LL3,
 
 
 
+points(x = c(summary(model.LL3)$coefficients[9, 1], 
+             summary(model.LL3)$coefficients[10, 1],
+             summary(model.LL3)$coefficients[11, 1],
+             summary(model.LL3)$coefficients[12, 1]),
+       y = c((summary(model.LL3)$coefficients[5, 1]/2), 
+             (summary(model.LL3)$coefficients[6, 1]/2),
+             (summary(model.LL3)$coefficients[7, 1]/2),
+             (summary(model.LL3)$coefficients[8, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
 abline(v = 105.1, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
-
-text(x = 350, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "meso = 11.4 ("%+-% "2.5)")),
-     cex = 1.0,
-     col = "black",
-     font = 2)
-
-
-text(x = 460, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "meso+P450 = 5.8 ("%+-% "1.5)*")),
-     cex = 1.0,
-     col = "black",
-     font = 2)
-
-
-text(x = 460, y = 1.1, 
-     labels = expression(paste("ED"[50] ~ "meso+GST = 4.8 ("%+-% "1.2)**")),
-     cex = 1.0,
-     col = "black",
-     font = 2)
-
-
-#text(x = 500, y = 2.2, 
-     #labels = expression("p-value = 0.01"),
-     #cex = 1.3,
-     #col = "black",
-     #font = 2)
 
 
 text(x = 320, y = 0.4, 
