--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A103.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A103.Rmd
@@ -29,7 +29,7 @@ data <- read.csv("Data Sheet_Meso_GH.csv")
 str(data)
 
 
-data_A20 <- data %>% filter(pop == "A20")
+data_A103<- data %>% filter(pop == "A103")
 
 
 
@@ -37,15 +37,15 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso"),
+summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A103, herb=="meso"),
           FUN=fun)
 
 
-summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso+GST"),
+summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A103, herb=="meso+GST"),
           FUN=fun)
 
 
-summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A20, herb=="meso+P450"),
+summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A103, herb=="meso+P450"),
           FUN=fun)
 
 
@@ -57,7 +57,7 @@ summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A20, type = "continuous")
+model.LL4<- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A103, type = "continuous")
 
 
                 
@@ -86,7 +86,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A20, type = "continuous")
+model.LL3<- drm(biomass ~ rate, herb, fct = LL.3(),  data = data_A103, type = "continuous")
 
 
 
@@ -139,9 +139,9 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 #SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/GH_Meso+MIs_A103_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -150,49 +150,41 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
-     ylim = c(0, 8),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
-     cex = 1.3,
+     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("A103 Biomass (g plant"^-1, ")")),
+     ylim = c(0, 4),
+     col = c("darkgreen", "red", "navy"),
+     pch = c(19, 17, 15),
+     cex = 1.1,
      cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(700, 6),
+     cex.legend = 1.2,
+     legendPos = c(1100, 3.5),
      lwd = 1)
 
 
-abline(v = 280, 
+
+points(x = c(summary(model.LL3)$coefficients[7, 1], 
+             summary(model.LL3)$coefficients[8, 1],
+             summary(model.LL3)$coefficients[9, 1]),
+       y = c((summary(model.LL3)$coefficients[4, 1]/2), 
+             (summary(model.LL3)$coefficients[5, 1]/2),
+             (summary(model.LL3)$coefficients[6, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
+abline(v = 105.1, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 680, y = 3.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
-     cex = 1.3,
-     col = "black",
-     font = 2)
 
-
-text(x = 700, y = 2.6, 
-     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
-     cex = 1.3,
-     col = "black",
-     font = 2)
-
-
-text(x = 500, y = 2.2, 
-     labels = expression("p-value = 0.01"),
-     cex = 1.3,
-     col = "black",
-     font = 2)
-
-
-text(x = 580, y = 1.2, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.2,
+text(x = 320, y = 0.4, 
+     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+     cex = 1.0,
      col = "black",
      font = 2)
 
