--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A75.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/MIs_meso_GH_A75.Rmd
@@ -139,9 +139,9 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 #SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Sulf_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/GH_Meso+MIs_A75_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -150,49 +150,41 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
-     ylim = c(0, 8),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
-     cex = 1.3,
+     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("A75 Biomass (g plant"^-1, ")")),
+     ylim = c(0, 4),
+     col = c("darkgreen", "red", "navy"),
+     pch = c(19, 17, 15),
+     cex = 1.1,
      cex.axis = 1,
      cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(700, 6),
+     cex.legend = 1.2,
+     legendPos = c(1100, 3.5),
      lwd = 1)
 
 
-abline(v = 280, 
+
+points(x = c(summary(model.LL3)$coefficients[7, 1], 
+             summary(model.LL3)$coefficients[8, 1],
+             summary(model.LL3)$coefficients[9, 1]),
+       y = c((summary(model.LL3)$coefficients[4, 1]/2), 
+             (summary(model.LL3)$coefficients[5, 1]/2),
+             (summary(model.LL3)$coefficients[6, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
+abline(v = 105.1, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 680, y = 3.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
-     cex = 1.3,
-     col = "black",
-     font = 2)
 
-
-text(x = 700, y = 2.6, 
-     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
-     cex = 1.3,
-     col = "black",
-     font = 2)
-
-
-text(x = 500, y = 2.2, 
-     labels = expression("p-value = 0.01"),
-     cex = 1.3,
-     col = "black",
-     font = 2)
-
-
-text(x = 580, y = 1.2, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.2,
+text(x = 320, y = 0.4, 
+     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+     cex = 1.0,
      col = "black",
      font = 2)
 
