--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _Brook.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _Brook.Rmd
@@ -31,7 +31,7 @@ data <- read.csv("Data Sheet_Meso_GC.csv")
 str(data)
 
 
-data_Brook_meso <- data %>% filter(pop == "Brook", herb == "meso")
+data_A101_meso <- data %>% filter(pop == "A101", herb == "meso")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.Brook_meso <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_Brook_meso),
+summary.A101_meso <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A101_meso),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.Brook_meso <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data 
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_Brook_meso, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A101_meso, type = "continuous")
 
 
                 
@@ -80,7 +80,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_Brook_meso, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A101_meso, type = "continuous")
 
 
 
@@ -136,8 +136,8 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
-     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/GC_Meso Only_A101_DR biomass.tiff",
+     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -146,16 +146,25 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Biomass (g plant"^-1, ")")),
+     ylab = expression(paste("A101 Biomass (g plant"^-1, ")")),
      ylim = c(0, 6),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(350, 4.5),
+     legendPos = c(400, 5.0),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 
@@ -165,25 +174,21 @@ abline(v = 105.1,
        col = "black")
 
 
-text(x = 300, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "Brook = 13.0 ("%+-% "1.2)")),
-     cex = 1.2,
+text(x = 330, y = 3.0, 
+     labels = expression("Elevated Upper Limit = 4.6 ("%+-% "0.2)" ^A),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 270, y = 1.95, 
-     labels = expression(paste("ED"[50] ~ "A82 = 0.9 ("%+-% "1.1)")),
-     cex = 1.2,
+
+text(x = 320, y = 2.7, 
+     labels = expression("Ambient Upper Limit = 3.1 ("%+-% "0.2)" ^B),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 220, y = 1.7, 
-     labels = expression("p-value < 0.0001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
 text(x = 250, y = 0.7, 
@@ -212,7 +217,7 @@ data <- read.csv("Data Sheet_Meso_GC.csv")
 str(data)
 
 
-data_Brook_meso_P450 <- data %>% filter(pop == "Brook", herb == "meso+P450")
+data_A101_meso_P450 <- data %>% filter(pop == "A101", herb == "meso+P450")
 
 
 
@@ -220,7 +225,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.Brook_meso_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_Brook_meso_P450),
+summary.A101_meso_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A101_meso_P450),
           FUN=fun)
 
 
@@ -232,7 +237,7 @@ summary.Brook_meso_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, 
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_Brook_meso_P450, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A101_meso_P450, type = "continuous")
 
 
                 
@@ -261,7 +266,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_Brook_meso_P450, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A101_meso_P450, type = "continuous")
 
 
 
@@ -317,7 +322,7 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Brook_Meso_P450_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/GC_Meso+P450_A101_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -327,16 +332,25 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Mesotrione+P450-inhibitor dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Brook biomass (g plant"^-1, ")")),
+     ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 4.5),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(400, 3.5),
+     legendPos = c(400, 3.8),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 
@@ -346,21 +360,24 @@ abline(v = 105.1,
        col = "black")
 
 
-text(x = 320, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "elevated = 18.7 ("%+-% "1.5)")),
-     cex = 1.2,
+
+text(x = 310, y = 2.2, 
+     labels = expression(paste("ED"[50] ~ "ambient = 0.03 ("%+-% "0.1)" ^A)),
+     cex = 1.1,
      col = "black",
      font = 2)
 
 
-text(x = 310, y = 2.0, 
-     labels = expression(paste("ED"[50] ~ "ambient = 0.03 ("%+-% "0.1)")),
-     cex = 1.2,
+
+text(x = 315, y = 2.0, 
+     labels = expression(paste("ED"[50] ~ "elevated = 18.7 ("%+-% "1.5)" ^B)),
+     cex = 1.1,
      col = "black",
      font = 2)
 
 
-text(x = 210, y = 1.8, 
+
+text(x = 220, y = 1.8, 
      labels = expression("p-value < 0.0001"),
      cex = 1.2,
      col = "black",
