--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
@@ -136,8 +136,8 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
-     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/GC_Meso Only_A82_DR biomass.tiff.tiff",
+     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -146,16 +146,25 @@ par(mar = c(5,5,1,1))
 plot(model.LL3,
      type = "average",
      xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Biomass (g plant"^-1, ")")),
+     ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
      ylim = c(0, 6),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
      legendPos = c(350, 4.5),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 
@@ -165,25 +174,20 @@ abline(v = 105.1,
        col = "black")
 
 
-text(x = 300, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "Brook = 13.0 ("%+-% "1.2)")),
-     cex = 1.2,
+text(x = 330, y = 3.0, 
+     labels = expression("Elevated Upper Limit = 5.7 ("%+-% "0.2)" ^A),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 270, y = 1.95, 
-     labels = expression(paste("ED"[50] ~ "A82 = 0.9 ("%+-% "1.1)")),
-     cex = 1.2,
+
+text(x = 320, y = 2.7, 
+     labels = expression("Ambient Upper Limit = 3.6 ("%+-% "0.2)" ^B),
+     cex = 1.0,
      col = "black",
      font = 2)
 
-
-text(x = 220, y = 1.7, 
-     labels = expression("p-value < 0.0001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
 text(x = 250, y = 0.7, 
