--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A101.Rmd
@@ -31,7 +31,7 @@ data <- read.csv("Data Sheet_2,4-D_GC.csv")
 str(data)
 
 
-data_Brook_24D <- data %>% filter(pop == "Brook", herb == "2,4D")
+data_A101_24D <- data %>% filter(pop == "A101", herb == "2,4D")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.Brook_24D <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_Brook_24D),
+summary.A101_24D <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A101_24D),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.Brook_24D <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data =
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_Brook_24D, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A101_24D, type = "continuous")
 
 
                 
@@ -80,7 +80,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_Brook_24D, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A101_24D, type = "continuous")
 
 
 
@@ -136,8 +136,8 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
-     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/GC_2,4-D Only_A101_DR biomass.tiff",
+     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -145,49 +145,55 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Biomass (g plant"^-1, ")")),
-     ylim = c(0, 6),
+     xlab = expression(paste("2,4-D dose (g ai ha"^-1, ")")),
+     ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
+     ylim = c(0, 5),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(350, 4.5),
+     legendPos = c(4200, 4.5),
      lwd = 1)
 
 
 
-abline(v = 105.1, 
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
+abline(v = 1065, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 300, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "Brook = 13.0 ("%+-% "1.2)")),
-     cex = 1.2,
+
+text(x = 3300, y = 2.8, 
+     labels = expression("Elevated Upper Limit = 3.2 ("%+-% "0.2)" ^A),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 270, y = 1.95, 
-     labels = expression(paste("ED"[50] ~ "A82 = 0.9 ("%+-% "1.1)")),
-     cex = 1.2,
+
+text(x = 3300, y = 2.6, 
+     labels = expression("Ambient Upper Limit = 2.0 ("%+-% "0.2)" ^B),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 220, y = 1.7, 
-     labels = expression("p-value < 0.0001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
-text(x = 250, y = 0.7, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+text(x = 2500, y = 0.9, 
+     labels = expression("1x rate: 1065 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
@@ -212,7 +218,7 @@ data <- read.csv("Data Sheet_2,4-D_GC.csv")
 str(data)
 
 
-data_Brook_24D_P450 <- data %>% filter(pop == "Brook", herb == "2,4D+P450")
+data_A101_24D_P450 <- data %>% filter(pop == "A101", herb == "2,4D+P450")
 
 
 
@@ -220,7 +226,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.Brook_24D_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_Brook_24D_P450),
+summary.Brook_24D_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data_A101_24D_P450),
           FUN=fun)
 
 
@@ -232,7 +238,7 @@ summary.Brook_24D_P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, d
 
 ```{r}
 
-model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_Brook_24D_P450, type = "continuous")
+model.LL4<- drm(biomass ~ rate, temp, fct = LL.4(), data = data_A101_24D_P450, type = "continuous")
 
 
                 
@@ -261,7 +267,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1
 #LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_Brook_24D_P450, type = "continuous")
+model.LL3<- drm(biomass ~ rate, temp, fct = LL.3(),  data = data_A101_24D_P450, type = "continuous")
 
 
 
@@ -317,8 +323,8 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-#tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Meso_High_DR_biomass.tiff",
-     #width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/GC_2,4-D+P450_A101_DR biomass.tiff",
+     width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
@@ -326,55 +332,62 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Biomass (g plant"^-1, ")")),
-     ylim = c(0, 6),
+     xlab = expression(paste("2,4-D+P450-inhibitor dose (g ae ha"^-1, ")")),
+     ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
+     ylim = c(0, 5),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(350, 4.5),
+     legendPos = c(4200, 4.5),
      lwd = 1)
 
 
 
-abline(v = 105.1, 
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
+
+
+
+abline(v = 1065, 
        lwd = 2, 
        lty = "twodash",
        col = "black")
 
 
-text(x = 300, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "Brook = 13.0 ("%+-% "1.2)")),
-     cex = 1.2,
+
+text(x = 3300, y = 2.8, 
+     labels = expression("Elevated Upper Limit = 3.1 ("%+-% "0.2)" ^A),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 270, y = 1.95, 
-     labels = expression(paste("ED"[50] ~ "A82 = 0.9 ("%+-% "1.1)")),
-     cex = 1.2,
+
+text(x = 3300, y = 2.6, 
+     labels = expression("Ambient Upper Limit = 2.2 ("%+-% "0.2)" ^B),
+     cex = 1.0,
      col = "black",
      font = 2)
 
 
-text(x = 220, y = 1.7, 
-     labels = expression("p-value < 0.0001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
-text(x = 250, y = 0.7, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+text(x = 2500, y = 0.9, 
+     labels = expression("1x rate: 1065 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
 
 
 dev.off()
+
 
 
 ```
